--- a/ubuntu/conf/wordpress/wordpress.conf
+++ b/ubuntu/conf/wordpress/wordpress.conf
@@ -16,11 +16,11 @@
 <VirtualHost *:80>
 	#
 	# Configuração do email do administrador do Wordpress
-	ServerAdmin admin@pti.intra
+	ServerAdmin admin@jhuly.intra
 	#
 	# Configuração do Virtual Host que irá responder pelas requisições do Wordpress
-	ServerName  wp.pti.intra
-	ServerAlias portal.pti.intra
+	ServerName  wp.jhuly.intra
+	ServerAlias portal.jhuly.intra
 	#
 	# Configuração do suporte aos arquivo index.php, index.html e install.php
 	DirectoryIndex index.php index.html install.php
